--- a/AppTFG/AppTFG/Paginas/PaginaVistaRuta.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaRuta.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Paginas.PaginaVistaRuta"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+             BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
     <!--<ScrollView Margin="0" VerticalScrollBarVisibility="Never">-->
         <!--<StackLayout Spacing="0" Padding="0" Margin="0">-->
             <!--<ActivityIndicator x:Name="indicator" Color="DarkOrange" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>-->
@@ -14,23 +14,23 @@
         </Grid.RowDefinitions>
         <Image Grid.Row="0" x:Name="imgRuta" Source="{Binding ImagenPrincipal}" 
                Aspect="AspectFill" HeightRequest="200"/>
-        <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
+        <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
             <StackLayout HorizontalOptions="StartAndExpand" VerticalOptions="Start" Margin="10">
-                <Label x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
-                       BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
-                <Label x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
-                        Margin="10, -5, 10, 10" BackgroundColor="{DynamicResource PageBackgroundColor}"
+                <Label x:Name="txtNombre" TextColor="{DynamicResource SecondaryColor}" Text="{Binding Descripcion}" 
+                       BackgroundColor="{DynamicResource OtroPageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
+                <Label x:Name="txtDescripcion" TextColor="{DynamicResource SecondaryColor}" Text="{Binding Descripcion}" 
+                        Margin="10, -5, 10, 10" BackgroundColor="{DynamicResource OtroPageBackgroundColor}"
                         FontSize="Medium" FontFamily="BSDRegular"/>
             </StackLayout>
         </Frame>
         <StackLayout Grid.Row="2" Spacing="0" Padding="0" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1">
             <StackLayout x:Name="stackMapa" Spacing="0" Padding="0" Margin="0, 0, 0, 0" HeightRequest="-1" WidthRequest="-1"/>
             <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" Margin="0,5,0,0">
-                <Button FontSize="Medium" Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="40"/>
-                <Button FontSize="Medium" Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="40"/>
-                <Button FontSize="Medium" Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="40"/>
+                <Button FontSize="Medium" Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="40"/>
+                <Button FontSize="Medium" Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="40"/>
+                <Button FontSize="Medium" Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="40"/>
             </StackLayout>
-            <Button Text="Iniciar ruta" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" 
+            <Button Text="Iniciar ruta" TextColor="{DynamicResource OtroPageBackgroundColor}" FontFamily="BSDRegular" 
                     FontSize="Medium" BackgroundColor="{DynamicResource PrimaryColor}" 
                     HorizontalOptions="Center" VerticalOptions="Center" WidthRequest="100" 
                     HeightRequest="40" Margin="5" Clicked="BtnIniciar_Clicked"/>
