--- a/AppTFG/AppTFG/Paginas/CrearRuta.xaml
+++ b/AppTFG/AppTFG/Paginas/CrearRuta.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:TabCtrls="clr-namespace:AppTFG.CustomTabs"
              x:Class="AppTFG.Paginas.CrearRuta"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+             BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnInfo" Text="Info." Order="Primary" Priority="0" Clicked="BtnInfo_Clicked" IconImageSource="outline_info_white_24"/>
         <ToolbarItem x:Name="btnRegistrar" Text="Guardar" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked" IconImageSource="baseline_save_white_24"/>
@@ -13,27 +13,27 @@
         <TabCtrls:CustomTabs x:Name="CrearRutasTab" Orientation="Vertical" SelectedTabIndex="0"  
                     SelectedColor="Orange" UnselectedColor="#791AE5"
                     VerticalOptions="Fill" HorizontalOptions="FillAndExpand">
-            <TabCtrls:CustomTabButtons Orientation="Horizontal" Margin="11, 0">
+            <TabCtrls:CustomTabButtons Orientation="Horizontal" Margin="11, 5, 0, 0">
                 <TabCtrls:CustomTabButton x:Name="MapaRutaTabButton" Text="Crear ruta"  
                             BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="CenterAndExpand"  
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
-                            TextColor="{DynamicResource PageBackgroundColor}"/>
+                            TextColor="{DynamicResource SecondaryTextColor}"/>
                 <TabCtrls:CustomTabButton x:Name="InfoRutaTabButton" Text="Información"  
                             BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="CenterAndExpand"
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
-                            TextColor="{DynamicResource PageBackgroundColor}"/>
+                            TextColor="{DynamicResource SecondaryTextColor}"/>
             </TabCtrls:CustomTabButtons>
             <TabCtrls:CustomTab x:Name="CrearRutaTab" IsVisible="True" 
                               VerticalOptions="Fill" HorizontalOptions="FillAndExpand"  
-                              BackgroundColor="{DynamicResource PageBackgroundColor}">
-                <Grid Margin="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
+                              BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
+                <Grid Margin="0" BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
                     <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
                     <StackLayout x:Name="stackMapa" Spacing="0" Padding="0" Margin="0" HeightRequest="-1" WidthRequest="-1" Grid.Row="0"/>
-                    <Grid BackgroundColor="{DynamicResource PageBackgroundColor}" Margin="11, 0" Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <Grid BackgroundColor="{DynamicResource OtroPageBackgroundColor}" Margin="11, 0" Grid.Row="1" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="40"/>
                             <RowDefinition Height="45"/>
@@ -46,16 +46,16 @@
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <StackLayout Orientation="Horizontal" HorizontalOptions="FillAndExpand" VerticalOptions="Center" Spacing="5" Grid.Row="0" Grid.ColumnSpan="2">
-                            <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDSemiBold" HeightRequest="40" HorizontalOptions="FillAndExpand"/>
-                            <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDSemiBold" HeightRequest="40" HorizontalOptions="FillAndExpand"/>
-                            <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDSemiBold" HeightRequest="40" HorizontalOptions="FillAndExpand"/>
+                            <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryTextColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDSemiBold" HeightRequest="40" HorizontalOptions="FillAndExpand"/>
+                            <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDSemiBold" HeightRequest="40" HorizontalOptions="FillAndExpand"/>
+                            <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDSemiBold" HeightRequest="40" HorizontalOptions="FillAndExpand"/>
                         </StackLayout>
-                        <Button Text="Poner pin" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource PageBackgroundColor}" Clicked="BtnPoner1Pin_Clicked" Grid.Row="1" Grid.Column="0"/>
-                        <Button Text="Poner ruta" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource PageBackgroundColor}" Clicked="BtnPonerRuta_Clicked" Grid.Row="1" Grid.Column="1"/>
-                        <Button Text="Borrar últ. pin" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource PageBackgroundColor}" Clicked="BtnBorrarUltPin_Clicked" Grid.Row="2" Grid.Column="0"/>
-                        <Button Text="Borrar pins" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource PageBackgroundColor}" Clicked="BtnBorrarPin_Clicked" Grid.Row="2" Grid.Column="1"/>
-                        <Button Text="Borrar últ. camino" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource PageBackgroundColor}" Clicked="BtnBorrarUltCamino_Clicked" Grid.Row="3" Grid.Column="0"/>
-                        <Button Text="Borrar ruta" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource PageBackgroundColor}" Clicked="BtnBorrarCamino_Clicked" Grid.Row="3" Grid.Column="1"/>
+                        <Button Text="Poner pin" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource SecondaryTextColor}" Clicked="BtnPoner1Pin_Clicked" Grid.Row="1" Grid.Column="0"/>
+                        <Button Text="Poner ruta" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource SecondaryTextColor}" Clicked="BtnPonerRuta_Clicked" Grid.Row="1" Grid.Column="1"/>
+                        <Button Text="Borrar últ. pin" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource SecondaryTextColor}" Clicked="BtnBorrarUltPin_Clicked" Grid.Row="2" Grid.Column="0"/>
+                        <Button Text="Borrar pins" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource SecondaryTextColor}" Clicked="BtnBorrarPin_Clicked" Grid.Row="2" Grid.Column="1"/>
+                        <Button Text="Borrar últ. camino" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource SecondaryTextColor}" Clicked="BtnBorrarUltCamino_Clicked" Grid.Row="3" Grid.Column="0"/>
+                        <Button Text="Borrar ruta" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="{DynamicResource SecondaryTextColor}" Clicked="BtnBorrarCamino_Clicked" Grid.Row="3" Grid.Column="1"/>
                         <Button Text="Borrar todo" FontFamily="BSDBold" FontSize="Medium" BackgroundColor="{DynamicResource TertiaryTextColor}" TextColor="Red" Clicked="BtnBorrarTodo_Clicked" Grid.Row="4" Grid.ColumnSpan="2"/>
                     </Grid>
                 </Grid>
@@ -70,24 +70,24 @@
                             <TabCtrls:CustomTabButton x:Name="DescripcionesTabButton" Text="Descripción"  
                             BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="StartAndExpand"  
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
-                            TextColor="{DynamicResource PageBackgroundColor}"/>
+                            TextColor="{DynamicResource OtroPageBackgroundColor}"/>
                             <TabCtrls:CustomTabButton x:Name="AudiosTabButton" Text="Audios"  
                             BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="CenterAndExpand"
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
-                            TextColor="{DynamicResource PageBackgroundColor}"/>
+                            TextColor="{DynamicResource OtroPageBackgroundColor}"/>
                             <TabCtrls:CustomTabButton x:Name="InfoTabButton" Text="Añadir info"  
                             BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="EndAndExpand" 
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
-                            TextColor="{DynamicResource PageBackgroundColor}" Clicked="BtnNuevaExp_Clicked"/>
+                            TextColor="{DynamicResource OtroPageBackgroundColor}" Clicked="BtnNuevaExp_Clicked"/>
                         </TabCtrls:CustomTabButtons>
                         <TabCtrls:CustomTab x:Name="DescripcionesTab" IsVisible="True" 
                               VerticalOptions="Fill" HorizontalOptions="FillAndExpand"  
-                              BackgroundColor="{DynamicResource PageBackgroundColor}">
+                              BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
                             <ListView x:Name="lsvDescripciones" HasUnevenRows="True" ItemSelected="LsvDescripciones_ItemSelected">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
-                                            <StackLayout Spacing="0" Orientation="Vertical" Padding="5" BackgroundColor="{DynamicResource PageBackgroundColor}">
+                                            <StackLayout Spacing="0" Orientation="Vertical" Padding="5" BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
                                                 <Grid>
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="*"/>
@@ -99,7 +99,7 @@
                                                     </Grid.ColumnDefinitions>
                                                     <Label Text="{Binding Numero}" LineBreakMode="WordWrap" VerticalOptions="Start" FontSize="Large" TextColor="{DynamicResource TertiaryTextColor}" HorizontalOptions="Start" Margin="10,5,0,5" FontFamily="BSDSemiBold" Grid.Row="0" Grid.Column="0"/>
                                                     <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Start" FontSize="Large" TextColor="{DynamicResource TertiaryTextColor}" HorizontalOptions="Start" Margin="0,5,5,5" FontFamily="BSDSemiBold" Grid.Row="0" Grid.Column="1"/>
-                                                    <Label Text="{Binding Descripcion}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Large" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="10,5,10,5" FontFamily="BSDRegular" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"/>
+                                                    <Label Text="{Binding Descripcion}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Large" TextColor="{DynamicResource SecondaryColor}" HorizontalOptions="Start" Margin="10,5,10,5" FontFamily="BSDRegular" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"/>
                                                 </Grid>
                                             </StackLayout>
                                         </ViewCell>
@@ -109,12 +109,12 @@
                         </TabCtrls:CustomTab>
                         <TabCtrls:CustomTab x:Name="AudiosTab" IsVisible="False" 
                               VerticalOptions="Fill" HorizontalOptions="FillAndExpand" 
-                              BackgroundColor="{DynamicResource PageBackgroundColor}">
+                              BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
                             <ListView x:Name="lsvAudios" HasUnevenRows="True" ItemSelected="LsvAudios_ItemSelected">
                                 <ListView.ItemTemplate>
                                     <DataTemplate>
                                         <ViewCell>
-                                            <StackLayout Spacing="0" Orientation="Vertical" Padding="5" BackgroundColor="{DynamicResource PageBackgroundColor}">
+                                            <StackLayout Spacing="0" Orientation="Vertical" Padding="5" BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
                                                 <Grid>
                                                     <Grid.RowDefinitions>
                                                         <RowDefinition Height="*"/>
@@ -127,7 +127,7 @@
                                                     <Label Text="{Binding Numero}" LineBreakMode="WordWrap" VerticalOptions="Start" FontSize="Large" TextColor="{DynamicResource TertiaryTextColor}" HorizontalOptions="Start" Margin="10,5,0,5" FontFamily="BSDSemiBold" Grid.Row="0" Grid.Column="0"/>
                                                     <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Start" FontSize="Large" TextColor="{DynamicResource TertiaryTextColor}" HorizontalOptions="Start" Margin="0,5,5,5" FontFamily="BSDSemiBold" Grid.Row="0" Grid.Column="1"/>
                                                     <!--<Button x:Name="bntPlay" Text = "Play" BackgroundColor="Silver"  WidthRequest="120" Image="Start" Clicked="Play_Clicked" IsEnabled= "true" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"/>-->
-                                                    <Label Text="Pulsa sobre este audio para reproducirlo." LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Large" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="10,5,10,5" FontFamily="BSDRegular" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"/>
+                                                    <Label Text="Pulsa sobre este audio para reproducirlo." LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Large" TextColor="{DynamicResource SecondaryColor}" HorizontalOptions="Start" Margin="10,5,10,5" FontFamily="BSDRegular" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"/>
                                                 </Grid>
                                             </StackLayout>
                                         </ViewCell>
