--- a/AppTFG/AppTFG/Paginas/ListaRutas.xaml
+++ b/AppTFG/AppTFG/Paginas/ListaRutas.xaml
@@ -3,19 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Paginas.ListaRutas"
              Title="Lista de Rutas"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+             BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
     <ContentPage.Content>
         <StackLayout Spacing="0" Orientation="Vertical" Padding="0">
             <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="0"/>
-            <SearchBar x:Name="searchBar" HorizontalOptions="Fill" VerticalOptions="CenterAndExpand" TextColor="{DynamicResource PageBackgroundColor}"
-                   Placeholder="Buscar ruta" CancelButtonColor="{DynamicResource PageBackgroundColor}" PlaceholderColor="{DynamicResource PageBackgroundColor}"
+            <SearchBar x:Name="searchBar" HorizontalOptions="Fill" VerticalOptions="CenterAndExpand" TextColor="{DynamicResource OtroPageBackgroundColor}"
+                   Placeholder="Buscar ruta" CancelButtonColor="{DynamicResource OtroPageBackgroundColor}" PlaceholderColor="{DynamicResource OtroPageBackgroundColor}"
                    TextTransform="Lowercase" HorizontalTextAlignment="Start" TextChanged="OnTextChanged" BackgroundColor="{DynamicResource TertiaryTextColor}"/>
             <ListView x:Name="lsvRutas" ItemSelected="LsvRutas_ItemSelected" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <StackLayout Spacing="0" Orientation="Vertical" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                                <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" HorizontalOptions="Start" Margin="10,5,10,5" HorizontalTextAlignment="Start" FontFamily="BSDSemiBold"/>
+                            <StackLayout Spacing="0" Orientation="Vertical" Padding="0" BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
+                                <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource SecondaryColor}" HorizontalOptions="Start" Margin="10,5,10,5" HorizontalTextAlignment="Start" FontFamily="BSDSemiBold"/>
                                 <Image Source="{Binding ImagenPrincipal}" HeightRequest="250" Aspect="AspectFill" HorizontalOptions="Fill"/>
                             </StackLayout>
                         </ViewCell>
