--- a/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaPueblo.xaml
@@ -2,12 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Paginas.PaginaPueblo"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+             BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnRegistrar" Text="Guardar" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked" IconImageSource="baseline_save_white_24"/>
         <ToolbarItem x:Name="btnEliminar" Text="Eliminar" Order="Primary" Priority="1" Clicked="BtnEliminar_Clicked" IconImageSource="baseline_delete_forever_white_24"/>
     </ContentPage.ToolbarItems>
-    <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}">
+    <StackLayout BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
         <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="-10"/>
         <ScrollView x:Name="parallaxScroll" VerticalOptions="FillAndExpand" 
                     HorizontalOptions="FillAndExpand" Margin="0" VerticalScrollBarVisibility="Never">
@@ -20,19 +20,19 @@
                     </Grid.RowDefinitions>
                     <Image Grid.Row="0" x:Name="imgPueblo" Source="{Binding ImagenPrincipal}"
                                Aspect="AspectFill" HeightRequest="200" BackgroundColor="AliceBlue"/>
-                    <Frame Grid.Row="1" CornerRadius="20" Padding="5" BackgroundColor="{DynamicResource PageBackgroundColor}">
-                        <StackLayout BackgroundColor="{DynamicResource PageBackgroundColor}" HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5">
+                    <Frame Grid.Row="1" CornerRadius="20" Padding="5" BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
+                        <StackLayout BackgroundColor="{DynamicResource OtroPageBackgroundColor}" HorizontalOptions="Fill" VerticalOptions="Fill" Margin="5">
                             <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="2*"/>
                                     <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <Entry Grid.Column="0" x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
+                                <Entry Grid.Column="0" x:Name="txtNombre" TextColor="{DynamicResource SecondaryColor}" Text="{Binding Nombre}" 
                                 Placeholder="Ingresa el nombre del pueblo" HorizontalOptions="StartAndExpand" FontSize="Large"
-                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" />
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource OtroPageBackgroundColor}" FontFamily="BSDRegular" />
                                 <Button Grid.Column="1" x:Name="btnImagen" Text="Foto perfil" 
                                 BackgroundColor="{DynamicResource PrimaryColor}" Margin="0" FontSize="Medium"
-                                TextColor="{DynamicResource PageBackgroundColor}" WidthRequest="90"  FontFamily="BSDRegular"
+                                TextColor="{DynamicResource OtroPageBackgroundColor}" WidthRequest="90"  FontFamily="BSDRegular"
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
                             </Grid>
                             <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="0" RowSpacing="0">
@@ -50,39 +50,39 @@
                                 <Button x:Name="btnRutas" Margin="5" ImageSource="baseline_directions_walk_white_48.png"
                                     BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnRutas_Clicked" Grid.Column="0" Grid.Row="0" BorderColor="Gray"/>
-                                <Label Text="Rutas" FontSize="Medium" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
+                                <Label Text="Rutas" FontSize="Medium" Grid.Column="0" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource SecondaryColor}"/>
                                 <Button x:Name="btnActividades" Margin="5" ImageSource="baseline_local_play_white_48.png"
                                     BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnActividades_Clicked" Grid.Column="1" Grid.Row="0" BorderColor="Gray"/>
-                                <Label Text="Actividades" FontSize="Medium" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
+                                <Label Text="Actividades" FontSize="Medium" Grid.Column="1" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource SecondaryColor}"/>
                                 <Button x:Name="btnComercios" Margin="5" ImageSource="baseline_storefront_white_48.png"
                                     BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="FillAndExpand"
                                     Clicked="BtnComercios_Clicked" Grid.Column="2" Grid.Row="0" BorderColor="Gray"/>
-                                <Label Text="Comercios" FontSize="Medium" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
+                                <Label Text="Comercios" FontSize="Medium" Grid.Column="2" Grid.Row="1" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource SecondaryColor}"/>
                                 <Button x:Name="btnAlojamientos" ImageSource="baseline_night_shelter_white_48.png" Margin="5"
                                     BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnAlojamientos_Clicked" Grid.Column="0" Grid.Row="2" BorderColor="Gray"/>
-                                <Label Text="Alojamientos" FontSize="Medium"  Grid.Column="0" Grid.Row="3" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
+                                <Label Text="Alojamientos" FontSize="Medium"  Grid.Column="0" Grid.Row="3" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource SecondaryColor}"/>
                                 <Button x:Name="btnFotos" Margin="5" ImageSource="baseline_local_see_white_48.png"
                                     BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="FillAndExpand"
                                     Clicked="BtnFotos_Clicked" Grid.Column="1" Grid.Row="2" BorderColor="Gray"/>
-                                <Label Text="Fotos" FontSize="Medium" Grid.Column="1" Grid.Row="3" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
+                                <Label Text="Fotos" FontSize="Medium" Grid.Column="1" Grid.Row="3" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource SecondaryColor}"/>
                                 <Button x:Name="btnVideo" Margin="5" ImageSource="baseline_smart_display_white_48.png"
                                     BackgroundColor="{DynamicResource PrimaryColor}"  HorizontalOptions="FillAndExpand" 
                                     Clicked="BtnVideo_Clicked" Grid.Column="2" Grid.Row="2" BorderColor="Gray"/>
-                                <Label Text="Vídeos" FontSize="Medium"  Grid.Column="2" Grid.Row="3" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource PrimaryTextColor}"/>
+                                <Label Text="Vídeos" FontSize="Medium"  Grid.Column="2" Grid.Row="3" HorizontalOptions="Center" FontFamily="BSDRegular" TextColor="{DynamicResource SecondaryColor}"/>
                             </Grid>
                             <Editor x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
                                 Placeholder="Ingresa una descripción del pueblo"  Margin="10, -5, 10, 10" AutoSize="TextChanges"
-                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource OtroPageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
                         </StackLayout>
                     </Frame>
                     <StackLayout Grid.Row="2" Margin="0,0,0,0" HeightRequest="-1" WidthRequest="-1" Spacing="2.5">
                         <StackLayout x:Name="stackMapa" HeightRequest="-1" WidthRequest="-1" VerticalOptions="Fill" HorizontalOptions="Fill"/>
                         <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" Spacing="5" >
-                            <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="45"/>
-                            <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="45"/>
-                            <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+                            <Button Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+                            <Button Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
+                            <Button Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="45"/>
                         </StackLayout>
                     </StackLayout>
                 </Grid>
