--- a/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaRuta.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:TabCtrls="clr-namespace:AppTFG.CustomTabs"
              x:Class="AppTFG.Paginas.PaginaRuta"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+             BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
     <ContentPage.ToolbarItems>
         <ToolbarItem x:Name="btnRegistrar" Text="Guardar" Order="Primary" Priority="0" Clicked="BtnRegistrar_Clicked" IconImageSource="baseline_save_white_24"/>
         <ToolbarItem x:Name="btnEliminar" Text="Eliminar" Order="Primary" Priority="1" Clicked="BtnEliminar_Clicked" IconImageSource="baseline_delete_forever_white_24.png"/>
@@ -15,7 +15,7 @@
         </Grid.RowDefinitions>
         <Image Grid.Row="0" x:Name="imgRuta" Source="{Binding ImagenPrincipal}" 
                Aspect="AspectFill" HeightRequest="200" BackgroundColor="AliceBlue"/>
-        <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource PageBackgroundColor}">
+        <Frame Grid.Row="1" CornerRadius="15" Padding="0" BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
             <StackLayout Orientation="Vertical" VerticalOptions="FillAndExpand" 
                          HorizontalOptions="FillAndExpand">
                 <TabCtrls:CustomTabs x:Name="RutasTab" Orientation="Vertical" SelectedTabIndex="0"  
@@ -25,15 +25,15 @@
                         <TabCtrls:CustomTabButton Grid.Column="0" x:Name="InfoRutaTabButton" Text="Info. General"  
                             BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="CenterAndExpand"  
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
-                            TextColor="{DynamicResource PageBackgroundColor}"/>
+                            TextColor="{DynamicResource SecondaryTextColor}"/>
                         <TabCtrls:CustomTabButton Grid.Column="1" x:Name="MapaTabButton" Text="Mapa"  
                             BorderRadius="1" BorderWidth="2" HeightRequest="45" HorizontalOptions="CenterAndExpand"
                             WidthRequest="100" FontSize="Medium" FontFamily="BSDSemiBold" 
-                            TextColor="{DynamicResource PageBackgroundColor}"/>
+                            TextColor="{DynamicResource SecondaryTextColor}"/>
                     </TabCtrls:CustomTabButtons>
                     <TabCtrls:CustomTab x:Name="InfoTab" IsVisible="True" 
                               VerticalOptions="Fill" HorizontalOptions="FillAndExpand"  
-                              BackgroundColor="{DynamicResource PageBackgroundColor}">
+                              BackgroundColor="{DynamicResource SecondaryTextColor}">
                         <Grid HorizontalOptions="StartAndExpand" VerticalOptions="Start" ColumnSpacing="5" Margin="10">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="50"/>
@@ -43,28 +43,28 @@
                                 <ColumnDefinition Width="*"/>
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
-                            <Entry Grid.Row="0" Grid.Column="0" x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
+                            <Entry Grid.Row="0" Grid.Column="0" x:Name="txtNombre" TextColor="{DynamicResource SecondaryColor}" Text="{Binding Nombre}" 
                                 Placeholder="Ingresa el nombre de la ruta" FontFamily="BSDRegular"
-                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium"/>
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource OtroPageBackgroundColor}" FontSize="Medium"/>
                             <Button Grid.Row="0" Grid.Column="1" x:Name="btnImagen" Text="Foto ruta"
                                 BackgroundColor="{DynamicResource PrimaryColor}" Margin="0" FontSize="Small"
-                                TextColor="{DynamicResource PageBackgroundColor}" WidthRequest="90"  FontFamily="BSDRegular"
+                                TextColor="{DynamicResource OtroPageBackgroundColor}" WidthRequest="90"  FontFamily="BSDRegular"
                                 HorizontalOptions="End" Clicked="BtnImagen_Clicked"/>
-                            <Editor Grid.Row="1" Grid.ColumnSpan="2" x:Name="txtDescripcion" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Descripcion}" 
+                            <Editor Grid.Row="1" Grid.ColumnSpan="2" x:Name="txtDescripcion" TextColor="{DynamicResource SecondaryColor}" Text="{Binding Descripcion}" 
                                 Placeholder="Ingresa una descripción de la ruta"  Margin="10, -5, 10, 10" AutoSize="TextChanges"
-                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
+                                PlaceholderColor="LightGray" BackgroundColor="{DynamicResource OtroPageBackgroundColor}" FontSize="Medium" FontFamily="BSDRegular"/>
                         </Grid>
                     </TabCtrls:CustomTab>
                     <TabCtrls:CustomTab x:Name="MapaTab" IsVisible="False" 
                               VerticalOptions="Fill" HorizontalOptions="FillAndExpand" 
-                              BackgroundColor="{DynamicResource PageBackgroundColor}">
+                              BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
                         <ActivityIndicator x:Name="indicator" Color="Teal" VerticalOptions="Center" HorizontalOptions="Center" Margin="0"/>
                         <StackLayout x:Name="stackMapa" Spacing="0" Padding="0" Margin="0, 0, 0, 5" HeightRequest="-1" WidthRequest="-1"/>
                         <StackLayout Orientation="Horizontal" VerticalOptions="Center" HorizontalOptions="Center" >
-                            <Button FontSize="Medium" Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="40" WidthRequest="70"/>
-                            <Button FontSize="Medium" Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="40" WidthRequest="70"/>
-                            <Button FontSize="Medium" Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" HeightRequest="40" WidthRequest="70"/>
-                            <Button Text="Editar ruta" TextColor="{DynamicResource PageBackgroundColor}" FontFamily="BSDRegular" 
+                            <Button FontSize="Medium" Text="Street" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="40" WidthRequest="70"/>
+                            <Button FontSize="Medium" Text="Satélite" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="40" WidthRequest="70"/>
+                            <Button FontSize="Medium" Text="Híbrido" Clicked="BtnMapa_Clicked" BackgroundColor="{DynamicResource PrimaryColor}" TextColor="{DynamicResource SecondaryTextColor}" FontFamily="BSDRegular" HeightRequest="40" WidthRequest="70"/>
+                            <Button Text="Editar ruta" TextColor="{DynamicResource OtroPageBackgroundColor}" FontFamily="BSDRegular" 
                                 FontSize="Medium" BackgroundColor="{DynamicResource PrimaryColor}" HorizontalOptions="Center" 
                                 VerticalOptions="Center" WidthRequest="90" HeightRequest="40" Clicked="BtnEditar_Clicked"/>
                         </StackLayout>
