--- a/AppTFG/AppTFG/Paginas/PaginaVistaListaFotos.xaml
+++ b/AppTFG/AppTFG/Paginas/PaginaVistaListaFotos.xaml
@@ -2,7 +2,7 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Paginas.PaginaVistaListaFotos"
-            BackgroundColor="{DynamicResource PageBackgroundColor}">
+            BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
     <TabbedPage.Children>
         <ContentPage IconImageSource="baseline_calendar_view_month_black_24.png">
             <ContentPage.Content>
@@ -57,7 +57,7 @@
                                                            HorizontalOptions="Fill" VerticalOptions="Fill" 
                                                            Grid.Column="0" Grid.Row="0"/>
                                                 <Label Text="{Binding Nombre}" LineBreakMode="WordWrap" 
-                                                           VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource PrimaryTextColor}" 
+                                                           VerticalOptions="Center" FontSize="Title" TextColor="{DynamicResource SecondaryColor}" 
                                                            HorizontalOptions="Start" Margin="5, 0, 0, 5"
                                                            HorizontalTextAlignment="Start" FontFamily="BSDRegular" 
                                                            Grid.Column="0" Grid.Row="1"/>
