--- a/AppTFG/AppTFG/Paginas/SubirFoto.xaml
+++ b/AppTFG/AppTFG/Paginas/SubirFoto.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppTFG.Paginas.SubirFoto"
-             BackgroundColor="{DynamicResource PageBackgroundColor}">
+             BackgroundColor="{DynamicResource OtroPageBackgroundColor}">
     <ContentPage.Content>
         <ScrollView VerticalScrollBarVisibility="Never">
             <StackLayout>
@@ -17,12 +17,12 @@
                         <Image x:Name="imgFoto" Source="{Binding Imagen}"
                             Aspect="AspectFill"  HorizontalOptions="Fill" 
                             VerticalOptions="Fill" Grid.Row="0" BackgroundColor="AliceBlue"/>
-                        <Entry x:Name="txtNombre" TextColor="{DynamicResource PrimaryTextColor}" Text="{Binding Nombre}" 
+                        <Entry x:Name="txtNombre" TextColor="{DynamicResource SecondaryColor}" Text="{Binding Nombre}" 
                            Placeholder="Título de la foto" FontFamily="BSDRegular"  Grid.Row="1"
-                           PlaceholderColor="LightGray" BackgroundColor="{DynamicResource PageBackgroundColor}" FontSize="Large"/>
+                           PlaceholderColor="LightGray" BackgroundColor="{DynamicResource OtroPageBackgroundColor}" FontSize="Large"/>
                         <Button x:Name="btnImagen" Text="Abrir galería" ImageSource="baseline_image_white_36.png"
                             BackgroundColor="{DynamicResource TertiaryTextColor}" Margin="10" FontSize="Large"
-                            TextColor="{DynamicResource PageBackgroundColor}" WidthRequest="150"  FontFamily="BSDRegular"
+                            TextColor="{DynamicResource SecondaryTextColor}" WidthRequest="150"  FontFamily="BSDRegular"
                             HorizontalOptions="Center" Clicked="BtnImagen_Clicked" Grid.Row="2" CornerRadius="5"/>
                     </Grid>
                 </StackLayout>
