--- a/AppTFG/AppTFG/Temas/TemaClaro.xaml
+++ b/AppTFG/AppTFG/Temas/TemaClaro.xaml
@@ -3,15 +3,17 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="AppTFG.Temas.TemaClaro">
 
-    <Color x:Key="PageBackgroundColor">White</Color>
+    <Color x:Key="PageBackgroundColor">#791AE5</Color>
+    <Color x:Key="OtroPageBackgroundColor">White</Color>
     <Color x:Key="NavigationBarColor">WhiteSmoke</Color>
     <Color x:Key="PrimaryColor">#791AE5</Color>
     <Color x:Key="SecondaryColor">Black</Color>
-    <Color x:Key="PrimaryTextColor">Black</Color>
+    <Color x:Key="PrimaryTextColor">#791AE5</Color>
     <Color x:Key="SecondaryTextColor">White</Color>
     <Color x:Key="TertiaryTextColor">#791AE5</Color>
     <Color x:Key="BotonesBarraAbajo">Gray</Color>
     <Color x:Key="BotonSeleccionadoBarraAbajo">Black</Color>
     <Color x:Key="TransparentColor">Transparent</Color>
+    <Color x:Key="LightGray">LightGray</Color>
 
 </ResourceDictionary>
