--- a/AppTFG/AppTFG/Temas/TemaOscuro.xaml
+++ b/AppTFG/AppTFG/Temas/TemaOscuro.xaml
@@ -3,16 +3,18 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                     x:Class="AppTFG.Temas.TemaOscuro">
 
-    <Color x:Key="PageBackgroundColor">Black</Color>
-    <Color x:Key="NavigationBarColor">Teal</Color>
-    <Color x:Key="PrimaryColor">Teal</Color>
+    <Color x:Key="PageBackgroundColor">#791AE5</Color>
+    <Color x:Key="OtroPageBackgroundColor">Black</Color>
+    <Color x:Key="NavigationBarColor">WhiteSmoke</Color>
+    <Color x:Key="PrimaryColor">#791AE5</Color>
     <Color x:Key="SecondaryColor">White</Color>
-    <Color x:Key="PrimaryTextColor">White</Color>
-    <Color x:Key="SecondaryTextColor">White</Color>
-    <Color x:Key="TertiaryTextColor">Teal</Color>
-    <Color x:Key="BotonesBarraAbajo">Black</Color>
+    <Color x:Key="PrimaryTextColor">#791AE5</Color>
+    <Color x:Key="SecondaryTextColor">Black</Color>
+    <Color x:Key="TertiaryTextColor">#791AE5</Color>
+    <Color x:Key="BotonesBarraAbajo">Gray</Color>
     <Color x:Key="BotonSeleccionadoBarraAbajo">White</Color>
     <Color x:Key="TransparentColor">Transparent</Color>
+    <Color x:Key="LightGray">LightGray</Color>
 
 </ResourceDictionary>
 
